--- a/achievements.html
+++ b/achievements.html
@@ -102,7 +102,7 @@
                         Helped set up Novarad of USA; launched their PACS & RIS (IT product) sales in India.
                     </li>
                     <li class = "lead">
-                        Assisting bedea Berkenhoff & Drebes GmbH, Germany to enter Indian market (B2B) for supply of components for Orthopedic Implants, Pacing Wires, etc. For more details Click <a href="http://www.bedea.com/index.php/en/portfolio/mini-ropes-and-strands"  target="_blank" rel="noreferrer">bedea</a>
+                        Assisting medical cable Tec GmbH, Germany to enter Indian market (B2B) for supply of components for Orthopedic Implants, Pacing Wires, etc. For more details Click <a href="https://medicalcable-tec.com"  target="_blank" rel="noreferrer">MCT</a>
                     </li>
                     <li class = "lead">
                         Helping EZM Edelstahlzieherei Mark GmbH, Germany capture Indian market space (B2B) for supply of raw materials to manufacture Orthopedic Implants.
@@ -282,16 +282,6 @@
             <div class="footer-copyright text-center py-3">© 2020 Copyright:
                 2016 DAA Business Associates Pvt. Ltd.
             </div>
-              <!-- Copyright -->
-            <!-- Footer -->
-        </footer>
-
-          <!-- Copyright -->
-            <div class="footer-copyright text-center py-3">© 2020 Copyright:
-                2016 DAA Business Associates Pvt. Ltd.
-            </div>
-              <!-- Copyright -->
-            <!-- Footer -->
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
