--- a/achievements.html
+++ b/achievements.html
@@ -69,7 +69,10 @@
                 <hr class="my-4">
                 <ul>
                     <li class = "lead">
-                        Introduced nebulizers in India in 1989 with Medic Aid Brought Spirometrics Inc. of USA to India in 1992.
+                        Introduced nebulizers in India in 1989 with Medic Aid. 
+                    </li>
+                    <li class = "lead">
+                        Brought Spirometrics Inc. of USA to India in 1992.
                     </li>
                     <li class = "lead">
                         Pioneered home-healthcare & home ventilation in 1993 with LifeCare Inc. of USA.
