Changing achievements and about us

--- a/achievements.html
+++ b/achievements.html
@@ -69,46 +69,46 @@
                 <hr class="my-4">
                 <ul>
                     <li class = "lead">
-                        Introduced nebulizers in India in 1989 with Medic Aid. 
+                        Introduced nebulizers in India in 1989 with <b>Medic Aid</b>. 
                     </li>
                     <li class = "lead">
-                        Brought Spirometrics Inc. of USA to India in 1992.
+                        Brought <b>Spirometrics Inc.</b> of USA to India in 1992.
                     </li>
                     <li class = "lead">
-                        Pioneered home-healthcare & home ventilation in 1993 with LifeCare Inc. of USA.
+                        Pioneered home-healthcare & home ventilation in 1993 with <b>LifeCare Inc.</b> of USA.
                     </li>
                     <li class = "lead">
-                        Introduced Respironics to India in 1994 and represented them for over 12 years. Respironics was later acquired by Philips.
+                        Introduced <b>Respironics</b> to India in 1994 and represented them for over 12 years. Respironics was later acquired by Philips.
                     </li>
                     <li class = "lead">
                         Gained over 80% of the non-invasive ventilation market.
                     </li>
                     <li class = "lead">
-                        Introduced Polysomnography and Sleep Medicine in India in 1995 with Vitalog, USA.
+                        Introduced Polysomnography and Sleep Medicine in India in 1995 with <b>Vitalog</b>, USA.
                     </li>
                     <li class = "lead">
-                        Grew GE's non-invasive ventilation and sleep products business by over 50%.
+                        Grew <b>GE's</b> non-invasive ventilation and sleep products business by over 50%.
                     </li>
                     <li class = "lead">
-                        Introduced Sechrist's HBO therapy business in India. Sechrist is now #1 in India.
+                        Introduced <b>Sechrist's</b> HBO therapy business in India. Sechrist is now #1 in India.
                     </li>
                     <li class = "lead">
-                        Grew Newport Medical of USA from Western region to a nationwide footprint.
+                        Grew <b>Newport Medical</b> of USA from Western region to a nationwide footprint.
                     </li>
                     <li class = "lead">
-                        Brought Medin of Germany to India.
+                        Brought <b>Medin</b> of Germany to India.
                     </li>
                     <li class = "lead">
-                        Helped in design and manufacture of several of Medin's neonatal products.
+                        Helped in design and manufacture of several of <b>Medin's</b> neonatal products.
                     </li>
                     <li class = "lead">
-                        Helped set up Novarad of USA; launched their PACS & RIS (IT product) sales in India.
+                        Helped set up <b>Novarad</b> of USA; launched their PACS & RIS (IT product) sales in India.
                     </li>
                     <li class = "lead">
-                        Assisting medical cable Tec GmbH, Germany to enter Indian market (B2B) for supply of components for Orthopedic Implants, Pacing Wires, etc. For more details Click <a href="https://medicalcable-tec.com"  target="_blank" rel="noreferrer">MCT</a>
+                        Assisting <b>medical cable Tec GmbH</b>, Germany to enter Indian market (B2B) for supply of components for Orthopedic Implants, Pacing Wires, etc. For more details Click <a href="https://medicalcable-tec.com"  target="_blank" rel="noreferrer">MCT</a>
                     </li>
                     <li class = "lead">
-                        Helping EZM Edelstahlzieherei Mark GmbH, Germany capture Indian market space (B2B) for supply of raw materials to manufacture Orthopedic Implants.
+                        Helping <b>EZM Edelstahlzieherei Mark GmbH</b>, Germany capture Indian market space (B2B) for supply of raw materials to manufacture Orthopedic Implants.
                     </li>
 
                 </ul>
