--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg  navbar-dark primary-color">
-            <a class="navbar-brand" href="#"><img src="media/logo.png"  width="140" height="75" alt=""  id = 'navbarmain'></a>
+            <!-- a class="navbar-brand" href="#"><img src="media/logo.png"  width="105" height="56" alt=""  id = 'navbarmain'></a -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
