--- a/aboutus.html
+++ b/aboutus.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes" />
     <meta name="description" content="A Group company started as a manufacturer of medical disposable products in the late eighties. DAA Business Associates was formed in 1993 and has many successful projects under its belt." />
     <meta name="author" content="" />
-    <title>Home</title>
+    <title>About Us</title>
     <!-- Font Awesome icons (free version)-->
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
@@ -428,16 +429,18 @@ height:max-content;
                     <h5 class="text-uppercase">Our Office Location</h5>
 
                     <ul class = 'list-unstyled'>
-                        <li>
-                            Ground Floor ISHAN, 42 Pratapgunj,</br>
-                            Vadodara 390002,India
-                        </li>
-                        <li>
-                            706 Shakuntala Building, 59 Nehru Place,</br>
-                            New Delhi 110019, India
-                        </li>
+                            <li>
+                                Ground Floor ISHAN, 42 Pratapgunj,</br>
+                                Vadodara 390002, India
+                            </li>
+                            </br>
+                            <li>
+                                E-202, LGF,</br>
+                                Greater Kailash Part II,</br>
+                                New Delhi 110048, India
+                            </li>
 
-                    </ul>
+                        </ul>
                     <h5 class="text-uppercase">Our Contact Number</h5>
 
                     <ul class = 'list-unstyled'>
