--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8" />
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes" />
-        <meta name="description" content="" />
+        <meta name="description" content="A Group company started as a manufacturer of medical disposable products in the late eighties. DAA Business Associates was formed in 1993 and has many successful projects under its belt." />
         <meta name="author" content="" />
         <title>Home</title>
         <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v5.12.1/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
-        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <!-- Font Awesome -->
@@ -21,11 +20,9 @@
         <!-- Google Fonts Roboto -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
         <!-- Bootstrap core CSS -->
-        <link rel="stylesheet" href="css/bootstrap.min.css">
         <!-- Material Design Bootstrap -->
         <link rel="stylesheet" href="css/mdb.min.css">
         <!-- Your custom styles (optional) -->
-        <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/master.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
@@ -36,14 +33,14 @@
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg  navbar-dark primary-color">
-            <!-- a class="navbar-brand" href="#"><img src="media/logo.png"  width="105" height="56" alt=""  id = 'navbarmain'></a -->
+            
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse fixed top" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
+                    <li class="nav-item active" >
                         <a class="nav-link disabled" href="index.html">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
@@ -85,6 +82,7 @@
             </div>
         </header>
         <!-- Portfolio Section-->
+        <!-- Contact Section-->
         <!-- Footer-->
         <footer class="page-footer font-small blue pt-4">
 
@@ -160,11 +158,13 @@
                         <ul class = 'list-unstyled'>
                             <li>
                                 Ground Floor ISHAN, 42 Pratapgunj,</br>
-                                Vadodara 390002,India
+                                Vadodara 390002, India
                             </li>
+                            </br>
                             <li>
-                                706 Shakuntala Building, 59 Nehru Place,</br>
-                                New Delhi 110019, India
+                                E-202, LGF,</br>
+                                Greater Kailash Part II,</br>
+                                New Delhi 110048, India
                             </li>
 
                         </ul>
@@ -198,15 +198,15 @@
           <!-- Footer Links -->
 
           <!-- Copyright -->
-            <div class="footer-copyright text-center py-3">© 2020 Copyright:
-                2016 DAA Business Associates Pvt. Ltd.
+            <div class="footer-copyright text-center py-3">
+                © 2016 DAA Business Associates Pvt. Ltd.
             </div>
               <!-- Copyright -->
             <!-- Footer -->
         </footer>
+        <!--Footer-->
+
         <!-- Bootstrap core JS-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
         <!-- Third party plugin JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
         <!-- Contact form JS-->
