Arrow to top added

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                 </div>
             </div>
         </nav>
+        <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
         <!-- Masthead-->
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
@@ -214,5 +215,6 @@
         <script src="assets/mail/contact_me.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+        <script src="js/index.js"></script
     </body>
 </html>
