--- a/achievements.html
+++ b/achievements.html
@@ -71,6 +71,7 @@
         <!-- Masthead-->
 
         <main>
+            <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
             <div class="jumbotron" style = "background : white">
                 <h1 class="display-4">Medical Devices, Components and Raw Materials</h1>
                 <hr class="my-4">
@@ -307,5 +308,7 @@
         <script src="assets/mail/contact_me.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+        <script src="js/index.js"></script>
+        
     </body>
 </html>
