--- a/thoughts.html
+++ b/thoughts.html
@@ -70,6 +70,7 @@
         <!-- Masthead-->
 
         <main>
+            <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
             <div class="jumbotron" style = "background : white">
                 <h1 class="display-4">Articles and White Papers</h1>
                 <hr class="my-4">
@@ -220,5 +221,6 @@
         <script src="assets/mail/contact_me.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+        <script src="js/index.js"></script>
     </body>
 </html>
