Added home and about pages

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes" />
-        <meta name="description" content="A Group company started as a manufacturer of medical disposable products in the late eighties. DAA Business Associates was formed in 1993 and has many successful projects under its belt." />
+        <meta name="description" content="A Startup to create a remote monitoring system for electricity consumption" />
         <meta name="author" content="" />
         <title>Home</title>
         <!-- Font Awesome icons (free version)-->
@@ -32,7 +32,7 @@
     </head>
     <body id="page-top">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg  navbar-dark primary-color">
+        <nav class="navbar navbar-expand-lg  navbar-dark text-white bg-secondary">
             
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -44,25 +44,16 @@
                         <a class="nav-link disabled" href="index.html">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="aboutus.html">About Us <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="achievements.html">Achievements <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="thoughts.html">Thoughts <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="projects.html">Projects <span class="sr-only">(current)</span></a>
+                        <a class="nav-link " href="aboutus.html">About Us <span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
                 <div class="contact">
                     <ul class="navbar-nav mr-auto my-2 my-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="tel:+91-9725009550"><i class="fas fa-phone-alt"></i> +91-9725009550<span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="tel:+91-76009-31609"><i class="fas fa-phone-alt"></i> +91-76009-31609<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="mailto:info@daabiz.in"><i class="far fa-envelope"></i> info@daabiz.in<span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="mailto:temp@gmail.com"><i class="far fa-envelope"></i> temp@gmail.com<span class="sr-only">(current)</span></a>
                         </li>
                     </ul>
                 </div>
@@ -70,14 +61,14 @@
         </nav>
         <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
         <!-- Masthead-->
-        <header class="masthead bg-primary text-white text-center">
+        <header class="masthead bg-dark text-white text-center">
             <div class="container d-flex align-items-center flex-column">
-                <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="media/logo.png" alt="" /><!-- Masthead Heading-->
+                <h2 class="display-4">Measure Mains</h2> 
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-line"></div>
                 </div>
-                <p class = 'lead'>A Group company started as a manufacturer of medical disposable products in the late eighties. DAA Business Associates was formed in 1993 and has many successful projects under its belt.</p>
+                <p class = 'lead'>A Startup to create a remote monitoring system for electricity consumption.</p>
                 <!-- Icon Divider-->
 
             </div>
@@ -85,7 +76,7 @@
         <!-- Portfolio Section-->
         <!-- Contact Section-->
         <!-- Footer-->
-        <footer class="page-footer font-small blue pt-4">
+        <footer class="page-footer font-small black pt-4">
 
           <!-- Footer Links -->
             <div class="container text-center text-md-left">
@@ -94,11 +85,11 @@
                 <div class="row">
 
               <!-- Grid column -->
-                    <div class="col-md-4 mt-md-0 mt-3">
+                    <div class="col-md-5 mt-md-0 mt-3">
 
                 <!-- Content -->
-                        <img src="media/logo.png" alt="logo.png" width = '200'style="margin: 0 auto;display: block;">
-                        <p>A Group company started as a manufacturer of medical disposable products in the late eighties. DAA Business Associates was formed in 1993 and has many successful projects under its belt.</p>
+                        <h3 style="text-align:center">Measure Mains</h3> 
+                        <p style="text-align:center">A Startup to create a remote monitoring system for electricity consumption.</p>
 
                     </div>
               <!-- Grid column -->
@@ -115,65 +106,19 @@
                             <li>
                                 <a href="aboutus.html" target="_blank" rel="noreferrer">About Us</a>
                             </li>
-                            <li>
-                                <a href="achievements.html" target="_blank" rel="noreferrer">Achievements</a>
-                            </li>
-                            <li>
-                                <a href="thoughts.html" target="_blank" rel="noreferrer">Thoughts</a>
-                            </li>
-                            <li>
-                                <a href="projects.html" target="_blank" rel="noreferrer">Projects</a>
-                            </li>
                         </ul>
 
                     </div>
               <!-- Grid column -->
 
-              <!-- Grid column -->
-                    <div class="col-md-2 mb-md-0 mb-3">
+                    <div class="col-md-5 mb-md-0 mb-3">
 
                 <!-- Links -->
-                        <h5 class="text-uppercase">Projects</h5>
-
-                        <ul class="list-unstyled">
-                            <li>
-                                <a href="#!">Established Hospitals</a>
-                            </li>
-                            <li>
-                                <a href="#!">Greenfield Hospitals</a>
-                            </li>
-                            <li>
-                                <a href="#!">Construction & Renovation</a>
-                            </li>
-                            <li>
-                                <a href="#!">Startup Initiatives</a>
-                            </li>
-                        </ul>
-
-                    </div>
-                    <div class="col-md-4 mb-md-0 mb-3">
-
-                <!-- Links -->
-                        <h5 class="text-uppercase">Our Office Location</h5>
-
-                        <ul class = 'list-unstyled'>
-                            <li>
-                                Ground Floor ISHAN, 42 Pratapgunj,</br>
-                                Vadodara 390002, India
-                            </li>
-                            </br>
-                            <li>
-                                E-202, LGF,</br>
-                                Greater Kailash Part II,</br>
-                                New Delhi 110048, India
-                            </li>
-
-                        </ul>
                         <h5 class="text-uppercase">Our Contact Number</h5>
 
                         <ul class = 'list-unstyled'>
                             <li>
-                                +91 9081259660,
+                                 +91-76009-31609,
                             </li>
                             <li>
                                 +91 11 4607 4901, 02, 03, 04 or 05
@@ -200,7 +145,7 @@
 
           <!-- Copyright -->
             <div class="footer-copyright text-center py-3">
-                © 2016 DAA Business Associates Pvt. Ltd.
+                © 2020 Measure Mains
             </div>
               <!-- Copyright -->
             <!-- Footer -->
