--- a/aboutus.html
+++ b/aboutus.html
@@ -49,10 +49,10 @@
             <div class="collapse navbar-collapse fixed top" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item" >
-                        <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+                        <a class="nav-link disabled" href="index.html">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="aboutus.html">About Us <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="aboutus.html">About Us <span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
                 <div class="contact">
@@ -61,7 +61,7 @@
                             <a class="nav-link" href="tel:+91-76009-31609"><i class="fas fa-phone-alt"></i> +91-76009-31609<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="mailto:temp@gmail.com"><i class="far fa-envelope"></i> temp@gmail.com<span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="mailto:kapalghane46@gmail.com"><i class="far fa-envelope"></i> kapalghane46@gmail.com<span class="sr-only">(current)</span></a>
                         </li>
                     </ul>
                 </div>
