--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <a class="nav-link" href="tel:+91-76009-31609"><i class="fas fa-phone-alt"></i> +91-76009-31609<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="mailto:temp@gmail.com"><i class="far fa-envelope"></i> temp@gmail.com<span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="mailto:kapalghane46@gmail.com"><i class="far fa-envelope"></i> kapalghane46@gmail.com<span class="sr-only">(current)</span></a>
                         </li>
                     </ul>
                 </div>
