--- a/aboutus.html
+++ b/aboutus.html
@@ -49,10 +49,10 @@
             <div class="collapse navbar-collapse fixed top" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item" >
-                        <a class="nav-link disabled" href="index.html">Home<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="aboutus.html">About Us <span class="sr-only">(current)</span></a>
+                        <a class="nav-link disabled" href="aboutus.html">About Us <span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
                 <div class="contact">
