--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                     <li class="nav-item active" >
                         <a class="nav-link disabled" href="index.html">Home<span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item">
+                    <!-- li class="nav-item">
                         <a class="nav-link " href="aboutus.html">About Us <span class="sr-only">(current)</span></a>
-                    </li>
+                    </li -->
                 </ul>
                 <div class="contact">
                     <ul class="navbar-nav mr-auto my-2 my-lg-0">
@@ -104,7 +104,7 @@
 
                         <ul class="list-unstyled">
                             <li>
-                                <a href="aboutus.html" target="_blank" rel="noreferrer">About Us</a>
+                                <a href="index.html" target="_blank" rel="noreferrer">Home</a>
                             </li>
                         </ul>
 
