--- a/aboutus.html
+++ b/aboutus.html
@@ -51,7 +51,7 @@
                     <li class="nav-item" >
                         <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link disabled" href="aboutus.html">About Us <span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
@@ -100,7 +100,7 @@
                 <!-- Content -->
                         <h3 style="text-align:center">Measure Mains</h3> 
                         <p style="text-align:center">A Startup to create a remote monitoring system for electricity consumption.</p>
-
+                        
                     </div>
               <!-- Grid column -->
 
@@ -114,7 +114,7 @@
 
                         <ul class="list-unstyled">
                             <li>
-                                <a href="aboutus.html" target="_blank" rel="noreferrer">About Us</a>
+                                <a href="index.html" target="_blank" rel="noreferrer">Home</a>
                             </li>
                         </ul>
 
@@ -124,16 +124,29 @@
                     <div class="col-md-5 mb-md-0 mb-3">
 
                 <!-- Links -->
+                        <h5 class="text-uppercase">Our Address</h5>
+
+                        <ul class = 'list-unstyled'>
+                            <li>
+                            iCreate Ahmedabad (International Centre for Entrepreneurship and Innovation)
+                            </li>
+                            <li>
+                                 1st Floor GMDC Building, University Ground, 
+                            </li>
+                            <li>
+                                132 Feet Ring Road, near Helmet Cross Road,
+                            </li>
+                            <li>
+                             Vastrapur, Ahmedabad, Gujarat 380052
+                            </>
+
+                        </ul>
                         <h5 class="text-uppercase">Our Contact Number</h5>
 
                         <ul class = 'list-unstyled'>
                             <li>
-                                 +91-76009-31609,
+                                 +91-95372-62339
                             </li>
-                            <li>
-                                +91 11 4607 4901, 02, 03, 04 or 05
-                            </li>
-
                         </ul>
                         <h5 class="text-uppercase">Our Contact E-mail</h5>
 
