--- a/index.html
+++ b/index.html
@@ -86,11 +86,8 @@
 
               <!-- Grid column -->
                     <div class="col-md-5 mt-md-0 mt-3">
-
-                <!-- Content -->
                         <h3 style="text-align:center">Measure Mains</h3> 
                         <p style="text-align:center">A Startup to create a remote monitoring system for electricity consumption.</p>
-
                     </div>
               <!-- Grid column -->
 
@@ -114,16 +111,30 @@
                     <div class="col-md-5 mb-md-0 mb-3">
 
                 <!-- Links -->
+                        <h5 class="text-uppercase">Our Address</h5>
+
+                        <ul class = 'list-unstyled'>
+                            <li>
+                            iCreate Ahmedabad (International Centre for Entrepreneurship and Innovation)
+                            </li>
+                            <li>
+                                 1st Floor GMDC Building, University Ground, 
+                            </li>
+                            <li>
+                                132 Feet Ring Road, near Helmet Cross Road,
+                            </li>
+                            <li>
+                             Vastrapur, Ahmedabad, Gujarat 380052
+                            </>
+
+                        </ul>
+                        
                         <h5 class="text-uppercase">Our Contact Number</h5>
 
                         <ul class = 'list-unstyled'>
                             <li>
-                                 +91-76009-31609,
+                                 +91-95372-62339
                             </li>
-                            <li>
-                                +91 11 4607 4901, 02, 03, 04 or 05
-                            </li>
-
                         </ul>
                         <h5 class="text-uppercase">Our Contact E-mail</h5>
 
