--- a/aboutus.html
+++ b/aboutus.html
@@ -116,6 +116,9 @@
                             <li>
                                 <a href="index.html" target="_blank" rel="noreferrer">Home</a>
                             </li>
+                            <li>
+                                <a href="aboutus.html" target="_blank" rel="noreferrer">About Us</a>
+                            </li>
                         </ul>
 
                     </div>
