--- a/index.html
+++ b/index.html
@@ -103,8 +103,10 @@
                             <li>
                                 <a href="index.html" target="_blank" rel="noreferrer">Home</a>
                             </li>
+                            <li>
+                                <a href="aboutus.html" target="_blank" rel="noreferrer">About Us</a>
+                            </li>
                         </ul>
-
                     </div>
               <!-- Grid column -->
 
